--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -1,20 +1,26 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: telco-deploy
+  name: nginx-deployment
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: telco
+      app: nginx
   template:
     metadata:
       labels:
-        app: telco
+        app: nginx
     spec:
       containers:
-      - name: telco-app
-        image: telco-app:good
+      - name: nginx
+        image: nginx
         ports:
-        - containerPort: 3000
-
+        - containerPort: 80
+        volumeMounts:
+        - name: html-volume
+          mountPath: /usr/share/nginx/html
+      volumes:
+      - name: html-volume
+        configMap:
+          name: nginx-html
