--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -14,5 +14,12 @@ jobs:
       uses: actions/setup-python@v4
       with:
         python-version: '3.x'
+
+    - name: Install dependencies
+      run: pip install pytest
+
+    - name: Run tests
+      run: pytest
+
     - name: Run app
       run: python app.py
