--- a/k8s/configmap.yaml
+++ b/k8s/configmap.yaml
@@ -1,9 +1,8 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: nginx-html
+  name: app-config
 data:
-  index.html: |
-    <h1>Hola desde ConfigMap 🚀</h1>
-    <p>Version 1</p>
+  MESSAGE: "Hola desde CONFIGMAP 🚀"
+
 
